Progress made upon completion of chapter 7 "Forms"

--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -22,6 +22,9 @@
     </div>
 
     <div>
+        {% if category %}
+            <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
+        {% endif %}
         <a href="/rango/">Home page</a><br />
     </div>
 </body>
