--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -39,6 +39,7 @@
     </div>
 
     <div>
+        <a href="/rango/add_category/">Add a new category</a><br />
         <a href="/rango/about/">About</a><br />
         <img src="{% static "images/panda.jpg" %}" alt="Pictures of Panda" />
     </div>
