Progress made upon completion of chapter 8 "Working with Templates"

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html>
+{% block title_block %}
+    About
+{% endblock %}
 
-<head>
-    <title>About Rango</title>
-</head>
-
-<body>
+{% block body_block %}
     <h1>There is supposed to be some info on Rango, but since it is just a book example there will not be one</h1>
     <div>
-        This tutorial has been put together by <strong> {{ creatorsname }}</strong>
-    </div>
-    <div>
-        <a href="/rango/">Home page</a><br />
+        This tutorial has been put together by <strong> {{ creatorsname }}</strong> <br />
         <img src="{{ MEDIA_URL }}dog.jpg" alt="Picture of happy panda">
     </div>
-</body>
-
-</html>
+{% endblock %}
