--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -1,31 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
-    <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-                <ul>
-                    {% for page in pages %}
-                     <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                     {% endfor %}
-                </ul>
-            {% else %}
-                <strong>No pages currently in the category.</strong>
-            {% endif %}
-        {% else %}
-            The specified category does not exist!
-        {% endif %}
-    </div>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-    <div>
-        {% if category %}
-            <a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
+{% block title_block %}
+    {{ category.name}}
+{% endblock %}
+
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+             <ul>
+            {% for page in pages %}
+                 <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <strong>No pages currently in the category.</strong>
         {% endif %}
-        <a href="/rango/">Home page</a><br />
-    </div>
-</body>
-</html>
+        <a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
+    {% else %}
+        The specified category does not exist!
+    {% endif %}
+{% endblock %}
