Progress made upon completion of chapter 10. Cookies and Sessions

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -9,6 +9,7 @@
     <h1>There is supposed to be some info on Rango, but since it is just a book example there will not be one</h1>
     <div>
         This tutorial has been put together by <strong> {{ creatorsname }}</strong> <br />
+        You have visited this site: {{ visits }} times <br />
         <img src="{{ MEDIA_URL }}dog.jpg" alt="Picture of happy panda">
     </div>
 {% endblock %}
