--- a/tango_with_django_project/templates/rango/add_page.html
+++ b/tango_with_django_project/templates/rango/add_page.html
@@ -1,29 +1,30 @@
 {% extends 'rango/base.html' %}
-{% load staticfiles %}
 
-{% block title_block %}
-    Add Page
-{% endblock %}
+{% block title_block %}Add Page{% endblock %}
 
 {% block body_block %}
     {% if category %}
-        <h1>Add a page to the Category <a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></h1>
-        <div>
-            <form id="page_form" method="POST" action="/rango/category/{{ category.slug }}/add_page/">
-                {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                    {{ hidden }}
-                {% endfor %}
-                {% for field in form.visible_fields %}
-                    {{ field.errors }}
-                    {{ field.help_text }}
-                    {{ field }}
-                    <br />
-                {% endfor %}
-                <input type="submit" name="submit" value="Create Page" />
-            </form>
-        </div>
+        <form role="form" id="page_form" method="POST" 
+            action="/rango/category/{{ category.slug }}/add_page/">
+            <h2 class="form-signin-heading"> Add a Page to
+                <a href="/rango/category/{{category.slug}}/">
+                {{ category.name }}</a></h2>
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
+            {% for field in form.visible_fields %}
+                {{ field.errors }}
+                {{ field.help_text }}<br />
+                {{ field }}<br />
+            {% endfor %}
+            <br />
+            <button class="btn btn-primary"
+                    type="submit" name="submit">
+                Add Page
+            </button>
+        </form>
     {% else %}
-        <h1>A category by this name doesn't exist</h1>
+        <p>A category by this name doesn't exist</p>
     {% endif %}
 {% endblock %}
