--- a/tango_with_django_project/templates/rango/base_boot-strap.html
+++ b/tango_with_django_project/templates/rango/base_boot-strap.html
@@ -16,18 +16,18 @@
     <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
   </head>
 
   <body>
+
     <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right hidden-lg-up" 
               type="button" 
               data-toggle="collapse" 
-              data-target="#navbar" 
-              aria-controls="navbar" 
-              aria-expanded="false" 
-              aria-label="Toggle navigation">
+              data-target="#navbarsExampleDefault" 
+              aria-controls="navbarsExampleDefault" 
+              aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="{% url 'index' %}">Rango</a>
@@ -77,16 +77,16 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row">
-            <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-                {% block sidebar_block %}
-                {% get_category_list category %}
-                {% endblock %}
-            </nav>
-            <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
-                {% block body_block %}{% endblock %}
-            </main>
-        </div>
+      <div class="row">
+      <div class="col-sm-3 col-md-2 sidebar">
+        {% block sidebar_block %}
+          {% get_category_list category %}
+        {% endblock %}
+      </div>
+      <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
+        {% block body_block %}{% endblock %}
+      </div>
+      </div>
     </div>
 
     <!-- Bootstrap core JavaScript
@@ -104,47 +104,3 @@
     </script>
 </body>
 </html>
-
-{% comment %}
-<!--<!DOCTYPE html>
-{% load staticfiles %}
-{% load rango_template_tags %}
-
-<html>
-    <head lang="en">
-        <title>
-            Rango -
-            {% block title_block %}
-                How to Tango with Django!
-            {% endblock %}
-        </title>
-    </head>
-    <body>
-        <div>
-            {% block body_block%}
-            {% endblock %}
-        </div>
-        <hr />
-        <div>
-            <ul>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
-                <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
-                <li><a href="{% url 'add_category' %}">Add New Category</a></li>
-            {% else %}
-                <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
-                <li><a href="{% url 'auth_login' %}">Login</a><li></li>
-            {% endif %}
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'index' %}">Index</a></li>
-                
-            </ul>
-        </div>
-        <div>
-            {% block sidebar_block %}
-            {% get_category_list category %}
-            {% endblock %}
-        </div>
-    </body>
-</html>-->
-{% endcomment %}
