--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -1,39 +1,48 @@
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
+{% block title_block %}
+    Index
+{% endblock %}
 
 {% block body_block %}
-    <h1>Rango says...</h1>
-    {% if user.is_authenticated %}
-        how doing {{ user.username }} ?
-    {% else %}
-        hey there partner!
-    {% endif %}
-
-    <h2>Most Liked Categories</h2>
-    <div>
-        {% if categories %}
-        <ul>
-            {% for category in categories %}
-                <li><a href="{% url 'show_category' category.slug %}">{{ category.name }}</a></li>
-            {% endfor %}
-        </ul>
+    <div class="jumbtron">
+        <h1>Rango says...</h1>
+        {% if user.is_authenticated %}
+            <h1>how are you doing {{ user.username }} ?</h1>
         {% else %}
-            <strong>There are no categories present.</strong>
+            <h1>hey there partner!</h1>
         {% endif %}
     </div>
-
-    <h2>Most Viewed Pages</h2>
-    <div>
-        {% if pages %}
-        <ul>
-            {% for page in pages %}
-            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
-        {% endif %}
+    <div class="row marketing">
+        <div class="col-lg-6">
+            <h2>Most Liked Categories</h2>
+            <p>
+            {% if categories %}
+            <ul class="list-group">
+                {% for category in categories %}
+                    <li class="list-group-item"><a href="{% url 'show_category' category.slug %}">
+                        {{ category.name }}</a></li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no categories present.</strong>
+            {% endif %}
+            </p>
+        </div>
+        <div class="col-lg-6">
+            <h2>Most Viewed Pages</h2>
+            <p>
+            {% if pages %}
+            <ul class="list-group">
+                {% for page in pages %}
+                <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                <strong>There are no pages present.</strong>
+            {% endif %}
+            </p>
+        </div>
     </div>
-
     <img src="{% static "images/panda.jpg" %}" alt="Picture of Panda" />
 {% endblock %}
