--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -44,6 +44,11 @@
               About
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'search' %}">
+              Search
+            </a>
+          </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'restricted' %}">
@@ -104,47 +109,3 @@
     </script>
 </body>
 </html>
-
-{% comment %}
-<!--<!DOCTYPE html>
-{% load staticfiles %}
-{% load rango_template_tags %}
-
-<html>
-    <head lang="en">
-        <title>
-            Rango -
-            {% block title_block %}
-                How to Tango with Django!
-            {% endblock %}
-        </title>
-    </head>
-    <body>
-        <div>
-            {% block body_block%}
-            {% endblock %}
-        </div>
-        <hr />
-        <div>
-            <ul>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'restricted' %}">Restricted Page</a></li>
-                <li><a href="{% url 'auth_logout' %}?next=/rango/">Logout</a></li>
-                <li><a href="{% url 'add_category' %}">Add New Category</a></li>
-            {% else %}
-                <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
-                <li><a href="{% url 'auth_login' %}">Login</a><li></li>
-            {% endif %}
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'index' %}">Index</a></li>
-                
-            </ul>
-        </div>
-        <div>
-            {% block sidebar_block %}
-            {% get_category_list category %}
-            {% endblock %}
-        </div>
-    </body>
-</html>-->
-{% endcomment %}
