--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -44,15 +44,20 @@
               About
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'search' %}">
-              Search
-            </a>
-          </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'restricted' %}">
               Restricted Page
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile' user.username %}">
+              Profile
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'list_profiles' %}">
+              List of profiles
             </a>
           </li>
           <li class="nav-item">
