Progress made upon completion of chapter 16. JQuery and Django and 17. AJAX in Django with JQuery

--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -12,4 +12,14 @@
         You have visited this site: {{ visits }} times <br />
         <img src="{{ MEDIA_URL }}dog.jpg" alt="Picture of happy panda">
     </div>
+    </br>
+    <button class="btn btn-primary" onClick="alert('You clicked the button using JavaScript.');">
+        Click Me - I run JavaScript
+    </button>
+    <p>This is an example</p>
+    <p>This is another example</p>
+    <button class="btn btn-primary" id="about-btn">
+        Click Me - I'm JavaScript on Speed
+    </button>
+    <div id="msg">Hello - I'm here for a JQuery Example too</div>
 {% endblock %}
