--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+<script src="{% static 'js/rango-ajax.js' %}"></script>
+<script src="{% static 'js/rango-jquery.js' %}"></script>
 {% load rango_template_tags %}
 <html lang="en">
   <head>
@@ -46,11 +49,6 @@
           </li>
           {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'restricted' %}">
-              Restricted Page
-            </a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{% url 'profile' user.username %}">
               Profile
             </a>
@@ -88,11 +86,18 @@
 
     <div class="container-fluid">
         <div class="row">
-            <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-                {% block sidebar_block %}
-                {% get_category_list category %}
-                {% endblock %}
-            </nav>
+          <div>
+            <ul class="nav nav-list flex-column">
+              <li class="nav-item">Type to find a category</li>
+              <form>
+              <li class="nav-item"><input class="search-query form-control" type="text"
+                name="suggestion" value="" id="suggestion" />
+              </li>
+              </form>
+            </ul>
+            <hr>
+            <div id="cats"></div>
+          </div>
             <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
                 {% block body_block %}{% endblock %}
             </main>
