--- a/tango_with_django_project/templates/rango/category.html
+++ b/tango_with_django_project/templates/rango/category.html
@@ -9,6 +9,7 @@
 {% block body_block %}
     {% if category %}
         <h1>{{ category.name }}</h1>
+        <div id="pages">
         {% if pages %}
              <ul>
             {% for page in pages %}
@@ -20,9 +21,19 @@
                 {% endif %}
             {% endfor %}
             </ul>
+            <div>
+            <strong id="like_count">{{ category.likes }}</strong> people like this category
+            {% if user.is_authenticated %}
+                <button id="likes" data-catid="{{category.id}}" class="btn btn-primary btn-sm" 
+                        type="button">
+                    Like
+                </button>
+            {% endif %}
+            </div>
         {% else %}
             <strong>No pages currently in the category.</strong>
         {% endif %}
+        </div>
         {% if user.is_authenticated %}
             <a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
         {% endif %}
@@ -54,6 +65,11 @@
                         <a href="{{ result.link }}">{{ result.title }}</a>
                     </h4>
                     <p class="list-group-item-text">{{ result.summary }}</p>
+                    {% if user.is_authenticated %}
+                    <button data-catid="{{category.id}}" data-title="{{ result.title }}"
+                            data-url="{{ result.link }}" class="rango-add btn btn-info btn-sm" 
+                            type="button">Add</button>
+                    {% endif %}
                 </div>
             {% endfor %}
             </div>
