Moved to bootstrap 4.5

--- a/tango_with_django_project/templates/rango/base_boot-strap.html
+++ b/tango_with_django_project/templates/rango/base_boot-strap.html
@@ -20,7 +20,10 @@
     <title>Rango - {% block title %}How to tango with Django{% endblock %}</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div>
+      {% block body_block %}
+      {% endblock %}
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
