--- a/tango_with_django_project/templates/rango/base.html
+++ b/tango_with_django_project/templates/rango/base.html
@@ -7,34 +7,21 @@
 <html lang="en">
   <head>
     <meta charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <link rel="icon" href="{% static 'images/favicon.ico' %}">
 
     <title>Rango - {% block title %}How to tango with Django{% endblock %}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="http://v4-alpha.getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </head>
 
   <body>
-    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-      <button class="navbar-toggler navbar-toggler-right hidden-lg-up" 
-              type="button" 
-              data-toggle="collapse" 
-              data-target="#navbar" 
-              aria-controls="navbar" 
-              aria-expanded="false" 
-              aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="{% url 'index' %}">Rango</a>
-
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1d2d50;">
+      <a class="navbar-brand" href="{% url 'index' %}">
+        <img src="{% static 'images/favicon.ico' %}" class="d-inline-block align-top" alt="" loading="lazy" />
+        Rango
+      </a>
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -86,7 +73,7 @@
 
     <div class="container-fluid">
         <div class="row">
-          <div>
+          <div class="col-2">
             <ul class="nav nav-list flex-column">
               <li class="nav-item">Type to find a category</li>
               <form>
@@ -98,7 +85,7 @@
             <hr>
             <div id="cats"></div>
           </div>
-            <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 main">
+            <main class="col-10">
                 {% block body_block %}{% endblock %}
             </main>
         </div>
