--- a/tango_with_django_project/templates/rango/index.html
+++ b/tango_with_django_project/templates/rango/index.html
@@ -20,8 +20,12 @@
             {% if categories %}
             <ul class="list-group">
                 {% for category in categories %}
-                    <li class="list-group-item"><a href="{% url 'show_category' category.slug %}">
-                        {{ category.name }}</a></li>
+                    <li class="list-group-item">
+                        <a href="{% url 'show_category' category.slug %}">
+                        {{ category.name }}</a>
+                    <span class="badge badge-primary badge-pill">
+                        {{ category.likes }}
+                    </span></li>
                 {% endfor %}
             </ul>
             {% else %}
@@ -35,7 +39,8 @@
             {% if pages %}
             <ul class="list-group">
                 {% for page in pages %}
-                <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a></li>
+                <li class="list-group-item"><a href="{{ page.url }}">{{ page.title }}</a>
+                <span class="badge badge-primary badge-pill">{{ page.views }}</span></li>
                 {% endfor %}
             </ul>
             {% else %}
