--- a/tango_with_django_project/templates/rango/list_profiles.html
+++ b/tango_with_django_project/templates/rango/list_profiles.html
@@ -8,22 +8,25 @@
     {% if userprofile_list %}
     <div class="panel-heading">
         <div class="panel-body">
-            <div class="list-group">
+            <div class="row">
                 {% for listuser in userprofile_list %}
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">>
-                        {% if listuser.picture %}
-                        <img src="{{ MEDIA_URL }}{{ listuser.picture }}"
-                                width="64"
-                                height="64"
-                                alt="{{selecteduser.username}}" />
-                        {% else %}
-                        <img width="64" height="64" src="http://lorempixel.com/64/64/people/"/>
-                        {% endif %}
-                        <a href="{% url 'profile' listuser.user.username %}">
-                            {{ listuser.user.username}}
-                        </a>
-                    </h4>
+                <div class="col-sm">
+                    <div class="list-group-item">
+                        <div class="card" style="width: 12rem;">
+                            {% if listuser.picture %}
+                            <img src="{{ MEDIA_URL }}{{ listuser.picture }}"
+                                    width="64"
+                                    height="64"
+                                    class="card-img-top"
+                                    alt="{{selecteduser.username}}" />
+                            {% else %}
+                            <img width="64" height="64" class="card-img-top" src="http://lorempixel.com/64/64/people/"/>
+                            {% endif %}
+                            <a class="card-text" href="{% url 'profile' listuser.user.username %}">
+                                {{ listuser.user.username}}
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 {% endfor %}
             </div>
